--- a/less/style.less
+++ b/less/style.less
@@ -541,11 +541,14 @@ a {
     margin-top: 40px;
   }
   .quote-text {
-    font-size: 20px;
+    font-size: 24px;
     line-height:30px;
     font-weight: 500;
     margin-bottom: 15px;
     color: #ffffff;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-style: italic;
   }
   .quote-author {
     font-weight: bold;
@@ -716,7 +719,7 @@ a {
   }
 }
 
-#whats-next {
+#section-whats-next {
   background: @red;
   .slide-title span {
      background: @red;
@@ -1801,7 +1804,6 @@ a {
 
 .social-icons {
   display: flex;
-  font-weight: black; 
   .soc-icon {
     width: 25%;
     color: #ffffff;
@@ -2185,7 +2187,7 @@ a {
   }
 }
 
-#whats-next .whats-next-points {
+#section-whats-next .whats-next-points {
   width: 100%;
 }
 
