--- a/less/style.less
+++ b/less/style.less
@@ -881,6 +881,7 @@ a {
   .research-link {
     margin-bottom: 30px;
     padding-left: 80px;
+    min-height: 54px;
     text-align: left;
     position: relative;
     &:after {
