jekyll, github pages

--- a/_includes/section-event-1.html
+++ b/_includes/section-event-1.html
@@ -25,7 +25,7 @@
         <img src="images/event-3-2.jpg" alt="">
 
         <div class="event-image-link">
-          <?php include ("moduls/photos-PDF-2017.php"); ?>
+          {% include photos-PDF-2017.html %}
           <img src="images/arrow-right.svg" class="links-arrow" alt="">
         </div>
       </div>
