--- a/_includes/section-event-2.html
+++ b/_includes/section-event-2.html
@@ -13,7 +13,7 @@
           <a target="_blank" href="http://pdfukraine.org/">Website</a>
            <span class="divider">|</span>
 
-          <?php include ("moduls/photos-1.php"); ?>
+          {% include photos-1.html %}
           <img src="images/arrow-left.svg" class="links-arrow" alt="">
         </div>
       </div> 
