--- a/_includes/section-event-3.html
+++ b/_includes/section-event-3.html
@@ -27,7 +27,7 @@
  <span class="divider">|</span>
           
 
-          <?php include ("moduls/photos-point-2017.php"); ?>
+          {% include photos-point-2017.html %}
         </div>
       </div>
     </div>
