--- a/_includes/section-event-4.html
+++ b/_includes/section-event-4.html
@@ -22,7 +22,7 @@
       <div class="event-image-2">
         <img src="images/datafest-2.jpg" alt="">
         <div class="event-image-link">
-          <?php include ("moduls/photos-datafest-2017.php"); ?>
+          {% include photos-datafest-2017.html %}
           <img src="images/arrow-right.svg" class="links-arrow" alt="">
         </div>
       </div>
