--- a/_includes/section-workshops-overview.html
+++ b/_includes/section-workshops-overview.html
@@ -12,7 +12,7 @@
           <h3>Data Advocacy and Communication</h3>
           <div class="links">
             
-            <?php include ("moduls/photos-gdansk.php"); ?>
+            {% include photos-gdansk.html %}
 
             <span class="divider">|</span>
             <a target="" href="https://transparencee.org/news/workshop-data-advocacy-summary/">Read overview</a>
@@ -24,7 +24,7 @@
           <h3>Data Storytelling for change</h3>
           <div class="links">
 
-            <?php include ("moduls/photos-sarajevo.php"); ?>
+            {% include photos-sarajevo.html %}
 
             <span class="divider">|</span>
             <a target="_blank" href="https://transparencee.org/news/turning-data-story-transparencee-workshop-sarajevo/">Read overview</a>
@@ -39,7 +39,7 @@
           <h3>Open Data in Action. The best cases to explore</h3>
           <div class="links">
             
-            <?php include ("moduls/photos-kyiv.php"); ?>
+            {% include photos-kyiv.html %}
 
             <span class="divider">|</span>
             <a target="_blank" href="https://transparencee.org/news/open-data-magic-pdf-ukraine/">Read overview</a>
@@ -50,7 +50,7 @@
           <div class="workshop-date">October 2017 Warsaw, Poland</div>
           <h3>Working with Data for Beginners</h3>
           <div class="links">
-             <?php include ("moduls/photos-warsaw.php"); ?>
+             {% include photos-warsaw.html %}
             <span class="divider">|</span>
             <a target="_blank" href="https://transparencee.org/news/working-data-beginners/">Read overview</a>
           </div>
